# dj

./: .dj-config.json  .dj-config.toml  CHANGELOG.md  LICENSE  README.md  README.rst  dj-config.json  pyproject.toml
.github/workflows/: pythonpackage.yml
dj/: __main__.py  config_loader.py  main.py  objects.py  process_runner.py
tests/: test_dj.py
