[tool.poetry]
name = "dj-command"
version = "0.2.0"
description = "Run Django management commands with a simple `dj {command_name}`. Can also use aliases for commands defined in a simple config file."
authors = ["Adam Hill <adamghill@yahoo.com>"]
include = [".dj-config.json"]
repository = "https://github.com/adamghill/dj"
packages = [
    { include = "dj" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
"delegator.py" = "^0.1.1"
attrs = "^19.1"
colorama = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
dj = 'dj:__main__.run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
