[tool.poetry]
name = "dj-command"
version = "0.5.2"
description = "Run commands with `dj {command_name}`. Uses aliases defined in a simple config file or defaults to Django management commands."
authors = ["Adam Hill <adamghill@yahoo.com>"]
include = [".dj-config.json"]
repository = "https://github.com/adamghill/dj"
packages = [
    { include = "dj" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
"delegator.py" = "^0.1.1"
attrs = "^19.1"
colorama = "^0.4.1"
python-dotenv = "^0.10.3"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
dj = 'dj:__main__.run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
